1. Modify "Login" to "Follow Me" 2. Modify "Try Free" to "Star Github" 3. Fix "Star Github" layout problem

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -58,17 +58,17 @@ header a {
   text-decoration: none; }
 
 header .header-wrap-outer {
-  box-shadow: 0 0 6px 0 rgba(140,140,141,.5);  
+  box-shadow: 0 0 6px 0 rgba(140,140,141,.5);
 }
 
 header .header-wrap {
   display: flex;
-  justify-content: space-between;  
+  justify-content: space-between;
   height: 100%;
-  width: 90%;  
+  width: 90%;
   max-width: 1600px;
   margin: 0 auto;
-  position: relative;  
+  position: relative;
 }
 
 header .logo {
@@ -76,7 +76,7 @@ header .logo {
   position: absolute;
   left: 0;
   top: 50%;
-  margin-top: -20px;  
+  margin-top: -20px;
 }
 
 header .logo img {
@@ -119,7 +119,7 @@ header nav.shortcuts li a:hover {
 }
 
 header nav.shortcuts-right li a label {
-  color: #5961ff;  
+  color: #5961ff;
   text-transform: capitalize;
   font-weight: 700;
 }
@@ -144,10 +144,10 @@ header nav.shortcuts-right li:last-child a label {
   color: #5961ff;
   border-radius: 6px!important;
   height: 52px;
-  width: 100px;
+  width: 126px;
   padding: 12px 16px 12px;
   display: flex;
-  align-items: center;  
+  align-items: center;
 }
 
 header nav.shortcuts-right li:last-child a label:hover {
@@ -161,7 +161,7 @@ header nav.shortcuts label {
   text-align: center;
   -webkit-text-stroke-width: .35px;
   -webkit-text-stroke-color: #fff;
-  font-weight: 700; 
+  font-weight: 700;
 }
 header nav.shortcuts li .submenu-wrapper {
   visibility: hidden;
@@ -900,7 +900,7 @@ ul.footer-action .social a {
   color: #a7a7a7;
   font-size: 35px;
   width: 1em;
-  margin-right: 7px;  
+  margin-right: 7px;
 }
 .btm_footer {
   background: #393b3c;
@@ -1564,7 +1564,7 @@ thead tr {
 
 .footer-wrapper {
   padding-top: 50px;
-  padding-bottom: 50px;  
+  padding-bottom: 50px;
   margin: 0 auto;
   max-width: 1100px;
   width: 90%;
@@ -1601,7 +1601,7 @@ thead tr {
   width: 50%;
   display: flex;
   margin-right: 50px;
-  margin-bottom: 30px;  
+  margin-bottom: 30px;
 }
 
 .footer nav ul {
@@ -1609,13 +1609,13 @@ thead tr {
 }
 
 .footer nav ul.partners {
-  margin-bottom: 30px;  
+  margin-bottom: 30px;
 }
 
 .footer nav a {
     font-size: 14px;
     color: #fff;
-    font-weight: 300;    
+    font-weight: 300;
 }
 
 .footer nav h6 {
@@ -1637,7 +1637,7 @@ thead tr {
     width: 100%;
     max-width: 100%;
     margin: 0;
-    padding: 0;    
+    padding: 0;
 }
 
 .footer .v-bottom .columns {
@@ -1668,7 +1668,7 @@ thead tr {
   font-size: 14px;
   margin-top: 0!important;
   font-weight: 500;
-  padding-bottom: 0!important;  
+  padding-bottom: 0!important;
   margin-bottom: 0!important;
 }
 
@@ -1698,7 +1698,7 @@ thead tr {
 }
 
 .footer .cta-btn a {
-  display: flex;  
+  display: flex;
   align-items: center;
   font-weight: 500;
   font-size: 15px;
@@ -3098,7 +3098,7 @@ article section.page table.hot-topics-table tbody tr:last-of-type td {
   header nav.shortcuts.shortcuts-right {
     display: inline-block;
     text-align: right;
-    flex: 1;    
+    flex: 1;
     margin: 15px 0px 0px 0px;
   }
 
@@ -3542,7 +3542,7 @@ a[href*="#no-click"], img[src*="#no-click"] {
   text-decoration: none;
 }
 
-.page .main-content .tab-content {  
+.page .main-content .tab-content {
   border: 1px solid #cecece;
   border-top: none;
   padding: 10px 20px;
